--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,17 @@
 * {
 	margin: 0;
 }
+
+.play_btn {
+	position: absolute;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	z-index: 3;
+	left: 50%;
+	border-radius: 0.4em;
+	padding: 0.3em 0.6em;
+	transition: all 300ms;
+}
+.play_btn:hover {
+	box-shadow: 0px 0px 8px 2px lightgoldenrodyellow;
+}
